--- a/Java based application/Java-spring-boot-Application/jenkinsfile
+++ b/Java based application/Java-spring-boot-Application/jenkinsfile
@@ -29,7 +29,7 @@ alpipeline {
         script {
             sh 'cd Java based application/Java-spring-boot-Application && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+            docker.withRegistry('https://index.docker.io/v1/', "docker-credential") {
                 dockerImage.push()
             }
         }
