--- a/Java based application/Java-spring-boot-Application/Dockerfile
+++ b/Java based application/Java-spring-boot-Application/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17-alpine # make sure I am using the correct version of Java
+FROM eclipse-temurin:17-alpine
 
 # Simply the artifact path
 ARG artifact=target/spring-boot-web.jar
