--- a/Java based application/Java-spring-boot-Application/jenkinsfile
+++ b/Java based application/Java-spring-boot-Application/jenkinsfile
@@ -11,28 +11,13 @@ pipeline {
         sh 'echo passed'
       }
     }
-    stage('Build and Test') {
-      steps {
-        sh 'ls -ltr'
+    //stage('Build and Test') {
+      //steps {
+        //sh 'ls -ltr'
         // build the project and create a JAR file
-        sh 'cd "Java based application/Java-spring-boot-Application" && mvn clean package'
-      }
-    }
+        //sh 'cd "Java based application/Java-spring-boot-Application" && mvn clean package'
+     // }
+   // }
   }
-    stage('Build and Push Docker Image') {
-      environment {
-        DOCKER_IMAGE = "rakibhasan031/ultimate-cicd:${BUILD_NUMBER}"
-        // DOCKERFILE_LOCATION = Java based application/Java-spring-boot-Application/Dockerfile"
-        REGISTRY_CREDENTIALS = credentials('docker-credential')
-      }
-      steps {
-        script {
-            sh 'cd Java based application/Java-spring-boot-Application && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-credential") {
-                dockerImage.push()
-            }
-        }
-      }
-    }
+
 }
