--- a/Java based application/Java-spring-boot-Application/jenkinsfile
+++ b/Java based application/Java-spring-boot-Application/jenkinsfile
@@ -11,13 +11,46 @@ pipeline {
         sh 'echo passed'
       }
     }
-    //stage('Build and Test') {
-      //steps {
-        //sh 'ls -ltr'
+    stage('Build and Test') {
+      steps {
         // build the project and create a JAR file
-        //sh 'cd "Java based application/Java-spring-boot-Application" && mvn clean package'
-     // }
-   // }
+        sh 'cd "Java based application/Java-spring-boot-Application" && mvn clean package'
+      }
+    }
   }
-
+    stage('Build and Push Docker Image') {
+      environment {
+        DOCKER_IMAGE = "rakibhasan031/ultimate-cicd:${BUILD_NUMBER}"
+        // DOCKERFILE_LOCATION = Java based application/Java-spring-boot-Application/Dockerfile"
+        REGISTRY_CREDENTIALS = credentials('docker-credential')
+      }
+      steps {
+        script {
+            sh 'cd Java based application/Java-spring-boot-Application && docker build -t ${DOCKER_IMAGE} .'
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            docker.withRegistry('https://index.docker.io/v1/', "docker-credential") {
+                dockerImage.push()
+            }
+        }
+      }
+    }
+    stage('Update Deployment File') {
+        environment {
+            GIT_REPO_NAME = "Implementation-of-Jenkins-Pipeline"
+            GIT_USER_NAME = "Rakib-Hasan031"
+        }
+        steps {
+            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                sh '''
+                    git config user.email "hasanrakib373@gmail.com"
+                    git config user.name "Rakib Hasan"
+                    BUILD_NUMBER=${BUILD_NUMBER}
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" Java based application/Mainfest-Repo/deployment.yml
+                    git add Java based application/Mainfest-Repo/deployment.yml
+                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                '''
+            }
+        }
+    }
 }
