--- a/Java based application/Java-spring-boot-Application/jenkinsfile
+++ b/Java based application/Java-spring-boot-Application/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      image 'maven:3.8.1-openjdk-11'
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
     }
   }
